[package]
name    = "ht-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes                = "1.5"          # latest stable
chacha20poly1305     = { version = "0.10.1", features = ["stream"] }  # <-- stable, contains XChaCha20Poly1305
mio                  = "0.8.11"
reed-solomon-erasure = "6.0.0"
socket2              = "0.5.8"
thiserror            = "1.0.61"
tokio                = { version = "1.37.0", features = ["full"] }
